--- a/src/views/layouts/includes/f-item-content.html
+++ b/src/views/layouts/includes/f-item-content.html
@@ -1,9 +1,11 @@
-{{#if notes}}<div class="f-item-notes" data-f-toggle="notes">
-	{{{notes}}}
-</div>{{/if}}
+{{#if notes}}
+<div class="f-item-notes" data-f-toggle="notes">
+  {{{notes}}}
+</div>
+{{/if}}
 <div class="f-item-preview">
-	{{{material @key @root}}}
+  {{{material @key @root}}}
 </div>
 <div class="f-item-code f-item-hidden" data-f-toggle="code">
-	<pre><code class="language-markup">{{material @key @root}}</code></pre>
+  <pre><code class="language-markup">{{material @key @root}}</code></pre>
 </div>
