update views and partials

--- a/src/views/layouts/default.html
+++ b/src/views/layouts/default.html
@@ -19,7 +19,7 @@
 
   {{#each scripts-head}}
     <!-- view-specific scripts -->
-    <script src={{.}}></script>
+    <script src={{this}}></script>
   {{/each}}
 
 </head>
