--- a/src/views/layouts/default.html
+++ b/src/views/layouts/default.html
@@ -42,6 +42,8 @@
   {{/if}}
 
   <!-- toolkit scripts -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular-animate.js"></script>
   <script src="{{baseurl}}/assets/toolkit/scripts/toolkit.js"></script>
   <!-- /toolkit scripts -->
 
