update partial name

--- a/src/assets/fabricator/styles/fabricator.scss
+++ b/src/assets/fabricator/styles/fabricator.scss
@@ -6,7 +6,7 @@
 
 @import 'partials/variables';
 @import 'partials/code';
-@import 'partials/color-chips';
+@import 'partials/color-blocks';
 @import 'partials/controls';
 @import 'partials/item';
 @import 'partials/layout';
