use new class names

--- a/src/materials/layout/grids.html
+++ b/src/materials/layout/grids.html
@@ -2,16 +2,16 @@
 <h3>.{{this}}</h3>
 
 <div class="{{this}}">
-  <div class="g one-third">
-    <div>one-third</div>
+  <div class="g g-1/3">
+    <div>.g-1/3</div>
   </div><!--
 
-  --><div class="g one-third">
-    <div>one-third</div>
+  --><div class="g g-1/3">
+    <div>.g-1/3</div>
   </div><!--
 
-  --><div class="g one-third">
-    <div>one-third</div>
+  --><div class="g g-1/3">
+    <div>.g-1/3</div>
   </div>
 </div>
 {{/each}}
