load custom stylesheet

--- a/src/views/layouts/default.html
+++ b/src/views/layouts/default.html
@@ -9,6 +9,7 @@
   {{#if fabricator}}<link rel="stylesheet" href="{{baseurl}}/assets/fabricator/styles/f.css">{{/if}}
 
   <!-- toolkit styles -->
+  <link rel="stylesheet" href="{{baseurl}}/assets/toolkit/assets/css/style.css">
   <link rel="stylesheet" href="{{baseurl}}/assets/toolkit/styles/toolkit.css">
   <!-- /toolkit styles -->
 
