fix color names not being output correctly

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -19,17 +19,17 @@ fabricator: true
 
 <h2>Colors</h2>
 
-{{#each toolkit.colors}}
+{{#each overview.colors}}
   <h3>{{@key}}</h3>
 
   <div class="f-color-container">
     {{#each this}}
       <div class="f-color" data-color-block=".f-color__block" data-color-output=".f-color__text">
-        <div class="f-color__block bgc_-{{@key}}{{this}}">
+        <div class="f-color__block bgc_-{{@../key}}{{this}}">
           <div class="f-color__block__inner"></div>
         </div>
         <div class="f-color__text">
-          {{@key}}{{this}}
+          {{@../key}}{{this}}
         </div>
       </div>
     {{/each}}
