put colors into their own data file

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -19,7 +19,7 @@ fabricator: true
 
 <h2>Colors</h2>
 
-{{#each overview.colors}}
+{{#each colors.namespaces}}
   <h3>{{@key}}</h3>
 
   <div class="f-color-container">
