--- a/src/views/layouts/default.html
+++ b/src/views/layouts/default.html
@@ -25,6 +25,7 @@
 
   {% body %}
 
+  <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular-animate.js"></script>
 
