--- a/src/materials/layout/wraps.html
+++ b/src/materials/layout/wraps.html
@@ -1,5 +1,5 @@
 {{#each layout.wraps}}
-<div class="{{this}}" data-computed-width="" data-style-props="width">
+<div class="{{this}} f-styled" data-computed-width="" data-style-props="width">
   <div style="text-align:center;">.{{this}}</div>
 </div>
 <br>
