--- a/src/materials/layout/grids.html
+++ b/src/materials/layout/grids.html
@@ -3,15 +3,15 @@
 
 <div class="{{this}}">
   <div class="g g-1/3">
-    <div>.g-1/3</div>
+    <div class="f-styled">.g-1/3</div>
   </div><!--
 
   --><div class="g g-1/3">
-    <div>.g-1/3</div>
+    <div class="f-styled">.g-1/3</div>
   </div><!--
 
   --><div class="g g-1/3">
-    <div>.g-1/3</div>
+    <div class="f-styled">.g-1/3</div>
   </div>
 </div>
 {{/each}}
