--- a/src/materials/layout/islands.html
+++ b/src/materials/layout/islands.html
@@ -1,5 +1,5 @@
 {{#each layout.islands}}
-<div class="{{this}} f-styled">
+<div class="{{this}} f-styled-island">
   <div style="text-align:center;">.{{this}}</div>
 </div>
 <br>
