--- a/src/materials/layout/padding.html
+++ b/src/materials/layout/padding.html
@@ -4,7 +4,7 @@ notes: |
   fabricator/../_layout.scss
 ---
 {{#each layout.padding}}
-<div class="{{this}}">
+<div class="{{this}} f-styled-padding">
   <div class="f-styled">.{{this}}</div>
 </div>
 <br>
