--- a/src/materials/layout/islands.html
+++ b/src/materials/layout/islands.html
@@ -1,3 +1,11 @@
+---
+notes: |
+  An island is a vertical spacing component used to wrap a piece of content in
+  top and bottom padding.<br>
+  files:<br>
+  'scss/custom/components/layout/_islands.scss'<br>
+  'scss/custom/mixins/layout/_islands.scss'
+---
 {{#each layout.islands}}
 <div class="{{this}} f-styled-island">
   <div style="text-align:center;">.{{this}}</div>
