--- a/src/materials/layout/wraps.html
+++ b/src/materials/layout/wraps.html
@@ -1,3 +1,9 @@
+notes: |
+  A wrap is a width restricting component that wraps content to a maximum width,
+  resizing dynamically with devices with smaller widths than itself.<br>
+  Wraps can be extended directly into components.<br>
+  files: 'scss/custom/components/layout/_wraps.scss'
+---
 {{#each layout.wraps}}
 <div class="{{this}} f-styled" data-computed-width="" data-style-props="width">
   <div style="text-align:center;">.{{this}}</div>
