--- a/src/materials/layout/islands.html
+++ b/src/materials/layout/islands.html
@@ -1,10 +1,10 @@
 ---
 notes: |
   An island is a vertical spacing component used to wrap a piece of content in
-  top and bottom padding.<br>
+  top and bottom padding.<br><br>
   files:<br>
-  'scss/custom/components/layout/_islands.scss'<br>
-  'scss/custom/mixins/layout/_islands.scss'
+  scss/custom/components/layout/_islands.scss<br>
+  scss/custom/mixins/layout/_islands.scss
 ---
 {{#each layout.islands}}
 <div class="{{this}} f-styled-island">
