--- a/src/materials/layout/margins.html
+++ b/src/materials/layout/margins.html
@@ -4,7 +4,7 @@ notes: |
   <code>scss/custom/components/_layout.scss</code>
   %push modifiers that do not yet have an associated class (and you don't want that
   class in production styles) can have that class added to
-  <code>styleguide/src/assets/fabricator/styles/views/_layout.scss</code>
+  <code>styleguide/src/assets/fabricator/styles/views/_layout.scss</code><br><br>
   files:<br>
   scss/custom/components/_layout.scss<br>
   scss/custom/mixins/layout/_margin_padding.scss
