--- a/src/materials/layout/wraps.html
+++ b/src/materials/layout/wraps.html
@@ -1,7 +1,7 @@
 notes: |
   A wrap is a width restricting component that wraps content to a maximum width,
   resizing dynamically with devices with smaller widths than itself.<br>
-  Wraps can be extended directly into components.<br>
+  Wraps can be extended directly into components.<br><br>
   files: 'scss/custom/components/layout/_wraps.scss'
 ---
 {{#each layout.wraps}}
