surround filenames in backticks

--- a/src/materials/layout/margins.html
+++ b/src/materials/layout/margins.html
@@ -6,8 +6,8 @@ notes: |
   class in production styles) can have that class added to
   <code>styleguide/src/assets/fabricator/styles/views/_layout.scss</code><br><br>
   files:<br>
-  scss/custom/components/_layout.scss<br>
-  scss/custom/mixins/layout/_margin_padding.scss
+  `scss/custom/components/_layout.scss`<br>
+  `scss/custom/mixins/layout/_margin_padding.scss`
 ---
 {{#each layout.margins}}
 <div class="f-margin-container">
