--- a/src/materials/layout/padding.html
+++ b/src/materials/layout/padding.html
@@ -6,8 +6,8 @@ notes: |
   class in production styles) can have that class added to
   <code>styleguide/src/assets/fabricator/styles/views/_layout.scss</code><br><br>
   files:<br>
-  scss/custom/components/_layout.scss<br>
-  scss/custom/mixins/layout/_margin_padding.scss
+  `css/custom/components/_layout.scss`<br>
+  `scss/custom/mixins/layout/_margin_padding.scss`
 ---
 {{#each layout.padding}}
 <div class="{{this}} f-styled-padding">
