show property values for each component

--- a/src/materials/layout/islands.html
+++ b/src/materials/layout/islands.html
@@ -7,7 +7,7 @@ notes: |
   `scss/custom/mixins/layout/_islands.scss`
 ---
 {{#each layout.islands}}
-<div class="{{this}} f-styled-island">
+<div class="{{this}} f-styled-island" data-computed-value="padding">
   <div style="text-align:center;">.{{this}}</div>
 </div>
 <br>
