--- a/src/materials/layout/padding.html
+++ b/src/materials/layout/padding.html
@@ -10,7 +10,7 @@ notes: |
   `scss/custom/mixins/layout/_margin_padding.scss`
 ---
 {{#each layout.padding}}
-<div class="{{this}} f-styled-padding">
+<div class="{{this}} f-styled-padding" data-computed-value="padding">
   <div class="f-styled">.{{this}}</div>
 </div>
 <br>
