--- a/src/materials/layout/margins.html
+++ b/src/materials/layout/margins.html
@@ -11,7 +11,7 @@ notes: |
 ---
 {{#each layout.margins}}
 <div class="f-margin-container">
-  <div class="{{this}}">
+  <div class="{{this}}" data-computed-value="margin">
     <div class="f-styled">.{{this}}</div>
   </div>
 </div>
