--- a/src/materials/layout/wraps.html
+++ b/src/materials/layout/wraps.html
@@ -6,7 +6,7 @@ notes: |
   files: `scss/custom/components/layout/_wraps.scss`
 ---
 {{#each layout.wraps}}
-<div class="{{this}} f-styled" data-computed-width="" data-style-props="width">
+<div class="{{this}} f-styled" data-computed-value="width">
   <div style="text-align:center;">.{{this}}</div>
 </div>
 <br>
