--- a/src/assets/fabricator/styles/views/_layout.scss
+++ b/src/assets/fabricator/styles/views/_layout.scss
@@ -17,7 +17,7 @@ $layout-margin: #f7cb9d; // chrome margin orange
 
 // islands
 .f-styled-island {
-	background-color: $layout-grey;
+  background-color: $layout-padding;
 
   & * { background-color: #FFF;}
 }
