--- a/src/materials/layout/grids.html
+++ b/src/materials/layout/grids.html
@@ -1,7 +1,7 @@
 ---
 notes: |
   .gw is the top-level grid-wrap. This is a required class for defining a grid.<br>
-  .g.g-n/m is the immediate child of any .gw or .gw modifier<br>
+  .g.g-n-of-m is the immediate child of any .gw or .gw modifier<br>
   These components are the rare exception of components that shouldn't be
   composed with any other components. Avoid placing any non-grid components onto
   these components.
@@ -10,16 +10,16 @@ notes: |
 <h3>.{{this}}</h3>
 
 <div class="{{this}}">
-  <div class="g g-1/3">
-    <div class="f-styled">.g-1/3</div>
+  <div class="g g-1-of-3">
+    <div class="f-styled">.g-1-of-3</div>
   </div><!--
 
-  --><div class="g g-1/3">
-    <div class="f-styled">.g-1/3</div>
+  --><div class="g g-1-of-3">
+    <div class="f-styled">.g-1-of-3</div>
   </div><!--
 
-  --><div class="g g-1/3">
-    <div class="f-styled">.g-1/3</div>
+  --><div class="g g-1-of-3">
+    <div class="f-styled">.g-1-of-3</div>
   </div>
 </div>
 {{/each}}
