ensure relative paths from parent project are matched for fonts

--- a/src/views/layouts/default.html
+++ b/src/views/layouts/default.html
@@ -6,7 +6,7 @@
 
   <title>{{title}}</title>
 
-  {{#if fabricator}}<link rel="stylesheet" href="{{baseurl}}/assets/fabricator/styles/f.css">{{/if}}
+  {{#if fabricator}}<link rel="stylesheet" href="{{baseurl}}/assets/styles/f.css">{{/if}}
 
   <!-- toolkit styles -->
   <link rel="stylesheet" href="{{baseurl}}/assets/css/style.css">
