improve comments on margin and padding views

--- a/src/materials/layout/padding.html
+++ b/src/materials/layout/padding.html
@@ -1,12 +1,12 @@
 ---
 notes: |
-  Components requiring padding can extend %soft placeholders found in
-  <code>scss/custom/components/_layout.scss</code>
-  %soft modifiers that do not yet have an associated class (and you don't want that
+  Components requiring padding can @include soft[--modifier] mixins found in
+  <code>scss/custom/layout/_padding.scss</code>
+  `soft` modifiers that do not yet have an associated class (and you don't want that
   class in production styles) can have that class added to
   <code>styleguide/src/assets/fabricator/styles/views/_layout.scss</code><br><br>
   files:<br>
-  `css/custom/components/_layout.scss`<br>
+  `scss/custom/components/_layout.scss`<br>
   `scss/custom/mixins/layout/_margin_padding.scss`
 ---
 {{#each layout.padding}}
