--- a/src/materials/layout/margins.html
+++ b/src/materials/layout/margins.html
@@ -1,8 +1,8 @@
 ---
 notes: |
-  Components requiring margins can extend %push placeholders found in
-  <code>scss/custom/components/_layout.scss</code>
-  %push modifiers that do not yet have an associated class (and you don't want that
+  Components requiring margins can @include push[--modifier] mixins found in
+  <code>scss/custom/layout/_margin.scss</code>
+  `push` modifiers that do not yet have an associated class (and you don't want that
   class in production styles) can have that class added to
   <code>styleguide/src/assets/fabricator/styles/views/_layout.scss</code><br><br>
   files:<br>
