--- a/src/assets/fabricator/styles/partials/_color-blocks.scss
+++ b/src/assets/fabricator/styles/partials/_color-blocks.scss
@@ -8,6 +8,7 @@
     flex-grow: 1;
     flex-shrink: 0;
     flex-basis: 0;
+    max-width: 200px;
 
     @media (max-width: 640px) { flex-basis: 100%;}
   }
