add height to grid for better demoing

--- a/src/materials/layout/grids.html
+++ b/src/materials/layout/grids.html
@@ -10,18 +10,24 @@ notes: |
 <h3>.{{this}}</h3>
 
 <div class="{{this}}">
-  <div class="g g-1-of-3">
-    <div class="f-styled">.g-1-of-3</div>
-  </div><!--
+  <div class="g g-1-of-3 g-lap-1-of-2 g-palm-1-of-1">
+    <div class="f-styled">
+      .g-1-of-3<br>
+      .g-lap-1-of-2<br>
+      .g-palm-1-of-1<br>
+    </div>
+  </div>
 
-  --><div class="g g-1-of-3">
-    <div class="f-styled">.g-1-of-3</div>
-  </div><!--
+  <div class="g g-1-of-3 g-lap-1-of-2 g-palm-1-of-1">
+    <div class="f-styled">
+      2 lines<br><br>
+    </div>
+  </div>
 
-  --><div class="g g-1-of-3">
-    <div class="f-styled">.g-1-of-3</div>
+  <div class="g g-1-of-3 g-lap-1-of-2 g-palm-1-of-1">
+    <div class="f-styled">
+      one line
+    </div>
   </div>
 </div>
 {{/each}}
-
-
