add generation of inline svg icons

--- a/src/views/layouts/default.html
+++ b/src/views/layouts/default.html
@@ -14,6 +14,9 @@
 
 </head>
 <body>
+  <div style="display: none;">
+    {{> inline-icons.svg}}
+  </div>
 
   {{#if fabricator}}
     {{> f-icons}}
