remove includes breaking build

--- a/src/assets/fabricator/styles/views/_layout.scss
+++ b/src/assets/fabricator/styles/views/_layout.scss
@@ -35,7 +35,7 @@ $layout-margin: #f7cb9d; // chrome margin orange
   }
 }
 
-.soft          { @include soft;}
+// .soft          { @include soft;}
 
 
 
@@ -52,7 +52,7 @@ $layout-margin: #f7cb9d; // chrome margin orange
   }
 }
 
-.push          { @include push;}
+// .push          { @include push;}
 
 
 
